@@ -8,6 +8,15 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2011-03-12 17:04 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
+  * contrib/sevenzip/7-zip32.h
+    + SVN file Id
+
+  * contrib/sevenzip/t7zip.prg
+  * contrib/sevenzip/sevenzip.c
+  * tests/7zip.prg
+    + Minor optimization on T7Zip:cBuffer allocation
+
 2011-03-12 15:25 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
   * contrib/sevenzip/t7zip.prg
   * contrib/sevenzip/sevenzip.c
